<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="CommandBase" Id="{ada50c45-e2a4-0e1e-2882-6555ee7dd9e0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC CommandBase IMPLEMENTS ICommand
VAR_IN_OUT
	(* Use Class Properties for IN_OUT Parameters!!! *)
END_VAR
VAR PERSISTENT
	stHandshake		: ST_CommandBaseHandshake;		// Variable Strukture for communication with PCS. Aditional IN and OUT parameters should be declared in the derived implementation.
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// OO-Class 
;]]></ST>
    </Implementation>
    <Method Name="Abort" Id="{ea835809-8527-04fc-2537-4ead9acb0d0c}">
      <Declaration><![CDATA[// Stops execution of Command 
METHOD PUBLIC Abort
]]></Declaration>
      <Implementation>
        <ST><![CDATA[stHandshake.nResultCode := E_CommandResultCode.Cancelled;
stHandshake.bExecute := FALSE;
stHandshake.bBusy := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="CalculateProgress" Id="{a16648df-eb2b-0767-0ec1-b2c892b01c2b}">
      <Declaration><![CDATA[METHOD PROTECTED CalculateProgress
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF stHandshake.nResultCode = E_CommandResultCode.Done THEN
	stHandshake.nProgress := 100;
ELSE
	stHandshake.nProgress := 0;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Done" Id="{38ab0c16-9dcb-0710-3b7a-4cc8228c26d9}">
      <Declaration><![CDATA[METHOD PROTECTED Done
]]></Declaration>
      <Implementation>
        <ST><![CDATA[stHandshake.nResultCode := E_CommandResultCode.Done;
stHandshake.bExecute := FALSE;
stHandshake.bBusy := FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Refresh" Id="{122b0574-ff69-07fc-29ae-2aea1e238cec}">
      <Declaration><![CDATA[// Update the state of the command button. Should be called every cycle.
METHOD PUBLIC Refresh
VAR
	bInit		: BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Starting Case
stHandshake.bBusy S= bInit := stHandshake.bExecute AND NOT stHandshake.bBusy;

// Reset Case
IF NOT stHandshake.bExecute AND stHandshake.bBusy THEN
	Abort();
END_IF

// Running Case
IF stHandshake.bExecute AND stHandshake.bBusy THEN
	IF bInit THEN
		stHandshake.nResultCode := E_CommandResultCode.Running;
	END_IF
	
	// Set Task init on First Call
	IF Task(bInit) THEN
		Done();
	END_IF
	
	CalculateProgress();
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Task" Id="{50b60cf9-4807-097f-189d-1bed3be2c16e}">
      <Declaration><![CDATA[// Execute the funktional part of the command implementation
METHOD PROTECTED Task : BOOL
VAR_INPUT
	Init 	: BOOL;		// True the first time the Task is called after Execute is started
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Task complete if return true
Task := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="CommandBase">
      <LineId Id="94" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="CommandBase.Abort">
      <LineId Id="11" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="CommandBase.CalculateProgress">
      <LineId Id="5" Count="1" />
      <LineId Id="8" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="CommandBase.Done">
      <LineId Id="9" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
    </LineIds>
    <LineIds Name="CommandBase.Refresh">
      <LineId Id="40" Count="0" />
      <LineId Id="56" Count="1" />
      <LineId Id="13" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="44" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="46" Count="1" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="CommandBase.Task">
      <LineId Id="10" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>